# battleship

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  eval_sampling.ipynb  eval_sampling.py  index.html  pyproject.toml
analysis/: pdfReportGenerator.py
battleship/: agents.py  board.py  captain_benchmarks.py  captains.py  fast_sampler.py  game.py  grammar.py  huggingface_llms.py  models.py  planner_captain.py  prompting.py  run_captain_benchmarks.py  run_spotter_benchmarks.py  sampler.py  scoring.py  spotter_model.py  spotters.py  strategies.py  translation.py  translator.py  util.py  utils.py
battleship/prompts/: examples.csv  human_question_dataset.csv  standard_prompts.py  test_examples.csv
collaborative_contexts/: board_B02.txt  board_B03.txt  board_B06.txt  board_B07.txt  board_B11.txt  board_B12.txt  board_B13.txt  board_B16.txt
docs/: .gitignore  index.html
experiments/: get_enum_baselines.ipynb  get_llm_baselines.ipynb  get_neurosymbolic_baselines.ipynb  get_sampling_baselines.ipynb  get_smc_baselines.ipynb  graphGenerator.ipynb  graph_generator.ipynb  llmbaselines.py  standard_prompts.py
notebooks/: captain_accuracy.ipynb  captain_analysis.ipynb  captain_benchmarks.py  eig_calculator.ipynb  entropy.ipynb  extract.ipynb  fast_sampler.ipynb  fast_sampler_ship_tracker.ipynb  game.ipynb  grammar_nltk.ipynb  heatmap_baseline.ipynb  hfppl.ipynb  human_question_evaluation.ipynb  humans_vs_symbolic.ipynb  posterior_viz.ipynb  prompting.ipynb  rational_decision_captain.ipynb  run_translation_evaluation.py  sampler.ipynb  spotter_accuracy_benchmarks.ipynb  spotter_analysis.ipynb  spotter_benchmark.ipynb  spotter_model.ipynb  translate.ipynb
tests/: new_sampler.py  test_board.py  test_eig_calculator.py  test_fast_sampler.py  test_scoring.py  test_translation.py  test_util.py
(+134 files in other folders)
