[tool.poetry]
name = "battleship"
version = "0.1.0"
description = ""
authors = ["Gabe Grand <grandg@mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.1"
Cython = "^3.0.5"
# expected-information-gain = { path = "./EIG/", develop = true }
transformers = "^4.34.1"
torch = "^2.1.0"
pandas = "^2.1.2"
accelerate = "^0.24.1"
bitsandbytes = "^0.41.1"
scipy = "^1.11.3"
optimum = "^1.14.0"
matplotlib = "^3.8.1"

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
jupyterlab = "^4.0.7"
pre-commit = "^3.5.0"
pytest = "^7.4.3"
ipywidgets = "^8.1.1"
seaborn = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
