[tool.poetry]
name = "battleship"
version = "0.2.0"
description = ""
authors = ["Gabe Grand <grandg@mit.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.1"
Cython = "^3.0.5"
transformers = "^4.30.0"
torch = "^2.1.0"
pandas = "^2.1.2"
accelerate = "^0.24.1"
bitsandbytes = "^0.41.1"
scipy = "^1.11.3"
optimum = "^1.14.0"
matplotlib = "^3.8.1"
lark = "^1.1.8"
nltk = "^3.8.1"
openai = "^1.77.0"
python-dotenv = "^1.1.0"
scikit-learn = "^1.6.1"
rich = "^14.0.0"

[tool.poetry.group.repos.dependencies]
# expected-information-gain = { path = "./EIG/", develop = true }
# synchromesh = {path = "../synchromesh", develop = true}
# hfppl = {path = "./hfppl", develop = true}

[tool.poetry.group.dev.dependencies]
black = "^23.10.1"
jupyterlab = "^4.0.7"
pre-commit = "^3.5.0"
pytest = "^7.4.3"
ipywidgets = "^8.1.1"
seaborn = "^0.13.0"
tabulate = "^0.9.0"
statsmodels = "^0.14.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
